CSS fix for spacing between options

--- a/client/stylesheets/question-templates.css
+++ b/client/stylesheets/question-templates.css
@@ -25,7 +25,13 @@
 	margin-top: -1px;
 }
 
-.col-md-45 .option-inner {
+.binaryOptions .square-options:nth-child(odd) {
+	width: 49%;
+	margin-right: 2%!important;
+	float: left;
+}
+
+.square-options .option-inner {
 	width: 100%;
 	display: block;
 	height: 95%;
@@ -43,7 +49,10 @@
 }
 
 .square-options {
+	margin-top: .25rem;
+	width: 49%;
 	height: 90px;
+	float: left;
 }
 
 .icon-container {
@@ -53,7 +62,7 @@
 	width: 20%;
 }
 
-.col-md-45 .option-title {
+.square-options .option-title {
 	width: 100%;
 	padding-top: 20px;
 	text-align: center;
@@ -62,7 +71,7 @@
 	clear: both;
 }
 
-.col-md-45 .multiplier {
+.square-options .multiplier {
 	width: 100%;
 	text-align: center;
 	float: left;
